# krayon.dev

./: .gitignore  README.md
src/server/: app_server.rs
ssh/: docker-compose.yml
web/: Cargo.toml  Dockerfile  build.rs  docker-compose.yml
web/blog/: goodbye-world.html  hello-world.html  posts.json
web/markdown/: dont eat everything.md  hello world.md  on advice.md
web/markdown/letters to my younger self/: on advice.md
web/posts/are hackathons a waste of time/: index.md
web/posts/blink in rust/: index.md
web/posts/breaking down hello world/: index.md
web/posts/deploying a portfolio over ssh was a mistake/: index.md
web/posts/dont eat everything/: index.md
web/posts/failing my first mobile consumer app startup/: index.md
web/posts/i made my first rust framework/: index.md
web/posts/index/: index.md
web/posts/making my own terminal pt 1 of n/: index.md
web/posts/rewriting the microbit default flash program in rust/: index.md
web/posts/rewriting the microbit v2 default flash program in rust/: index.md
web/posts/testpost/: index.md
web/src/: main.rs
web/static/: 404.html  blog.html  blog_file.html  blog_row.html  index.html  llms.txt
