[package]
name = "web"
version = "0.1.0"
edition = "2024"

[build-dependencies]
pulldown-cmark = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies]
actix-web = "4"
actix-files = "0.6"
tokio = { version = "1", features = ["full"] }
rust-embed = "8.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
