[package]
name = "web"
version = "0.1.0"
edition = "2024"

[build-dependencies]
chrono = { version = "0.4", features = ["serde"] }
pulldown-cmark = "0.13"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies]
axum = "0.8"
mime_guess = "2.0"
tokio = { version = "1", features = ["full"] }
rust-embed = "8.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
